crates/hydracache/tests/cacheable/fail_attribute_empty_tag_segment_group.stderr
error: cacheable attribute segment list cannot be empty
 --> tests/cacheable/fail_attribute_empty_tag_segment_group.rs:1:1
  |
1 | / #[hydracache::cacheable(
2 | |     cache = cache,
3 | |     key_segments = ["value", id],
4 | |     tag_segments = [[]],
5 | |     ttl_secs = 60
6 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `hydracache::cacheable` (in Nightly builds, run with -Z macro-backtrace for more info)
